devops-intro/k8s/devops-intro-ser.yml
apiVersion: apps/v1
kind: Service
metadata:
  labels:
    app: devops-intro
  name: devops-intro
spec:
  selector:
    matchLabels:
      app: devops-intro
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
