devops-intro/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: devops-intro
  name: devops-intro
spec:
  selector:
    app: devops-intro
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
