devops-intro/k8s/devops-intro-ing.yml
apiVersion: app/v1
kind: Ingress
metadata:
  name: devops-intro
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
